# rua

./: .gitignore  Cargo.toml  LICENSE-MIT  Model.md  Readme.md  config.deploy.toml  config.toml  draw.py  run.sh
.github/workflows/: ci.yml  deploy.yml  release.yml
data/: area_history.csv
img/: area.html
src/: constants.rs  data.rs  fetch.rs  main.rs  model.rs  plot.rs  report.rs  series.rs
src/report/: chart.rs  data.rs  page.rs
