cargo-features = ["profile-rustflags"]

[package]
name = "rua"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["socks"] }

tokio = { version = "1.48", features = ["full"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
tqdm = "*"
polars = "0.52"
plotly = "0.13"
csv = "1.4"
itertools = "0.14"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
opt-level = 3
rustflags = ["-Ctarget-cpu=native", "-Ctarget-feature=+avx2,+fma"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
