cargo-features = ["profile-rustflags"]

[package]
name = "rua"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/hexqnt/rua"
homepage = "https://rua.hexq.ru"
readme = "README.md"

[dependencies]
reqwest = { version = "0.13", features = ["socks"] }
clap = { version = "4.5", features = ["derive"] }

tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tqdm = "0.8"
polars = "0.52"
plotly = "0.14"
csv = "1.4"
itertools = "0.14"
maud = "0.27.0"
argmin = "0.11.0"
argmin-math = { version = "0.5", features = ["vec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
bytes = "1.11"
toml = "0.9"
clap_complete = "4.5.65"
flate2 = "1.1"
minify-html = "0.18.1"

[profile.release]
strip = "debuginfo"
lto = true
codegen-units = 1
opt-level = 3
rustflags = ["-Ctarget-cpu=native", "-Ctarget-feature=+avx2,+fma"]

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
cargo = "warn"
